--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,16 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Emilija Rackauskaite</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Emilija Rackauskaite</title>
+    <link rel="stylesheet" type="text/css" href="./assets/styles/App.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/styles/reset.css" />
+    <link rel="stylesheet" type="text/css" href="../assets/styles/vars.css" />
+    <script src="./index.tsx" type="module" defer></script>
+  </head>
 
-        <link
-            rel="stylesheet"
-            type="text/css"
-            href="./assets/styles/reset.css"
-        />
-        <link
-            rel="stylesheet"
-            type="text/css"
-            href="../assets/styles/variables.css"
-        />
-        <script src="./index.tsx" type="module" defer></script>
-    </head>
-
-    <body>
-        <div id="root"></div>
-    </body>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
