--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="./assets/styles/App.css" />
     <link rel="stylesheet" type="text/css" href="./assets/styles/reset.css" />
     <link rel="stylesheet" type="text/css" href="../assets/styles/vars.css" />
+    <link rel="stylesheet" type="text/css" href="../assets/styles/Slider.css" />
     <script src="./index.tsx" type="module" defer></script>
   </head>
 
